# rpi_multirec

./: .gitignore  CMakeLists.txt  INSTALL.md  NOTES.md  README.md  boot_setup.txt  rpi_multirec.service  smb.conf
STL/: RPi_RecorderButtons.stl  RPi_RecorderCaseBottomBattery.stl  RPi_RecorderCaseBottomNoBattery.stl  RPi_RecorderCaseBottomSideInsertBattery.stl  RPi_RecorderCaseTop.stl  RPi_RecorderLCDSupportL.stl  RPi_RecorderLCDSupportS.stl
deploy/samba/: recordings-share.conf
deploy/systemd/: rpi-usb-automount@.service  rpi_multirec.service.in
deploy/udev/: 99-rpi_multirec-automount.rules
scripts/: install_rpi.sh  postinstall_check.sh
src/: alsa_utils.h  app.cpp  audio_utils.h  common.h  hat_ui.h  main.cpp  options.h  path_utils.h  types.h  ups_hat.h  zylia_gain.h
zm-1-driver-2.7.0/: dkms.conf
zm-1-driver-2.7.0/linux/: Makefile
zm-1-driver-2.7.0/linux/src/: chardev.c  chardev.h  defs.h  defs.o_shipped  device.c  device.h  ftdi.c  ftdi.h  mixer.c  mixer.h  module.c  module.h  snd.c  snd.h  usb.c  usb.h  version.h
zm-1-driver-2.7.0/zm-1-driver-dkms-mkdeb/template-dkms-mkdeb/debian/: postinst
